config_mgmt/gitops/bootstrap/camel-splitter/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: camel-splitter
    app.kubernetes.io/managed-by: quarkus
  name: camel-splitter
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app.kubernetes.io/name: camel-splitter
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: camel-splitter
    app.kubernetes.io/managed-by: quarkus
  name: camel-splitter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: camel-splitter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: camel-splitter
        app.kubernetes.io/managed-by: quarkus
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_OPTIONS
              value: -Dvertx.metrics.options.enabled=true -Dvertx.metrics.options.registryName=prometheus
          image: quay.io/redhat_naps_da/camel-splitter:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: camel-splitter
          ports:
            - containerPort: 8443
              name: https
              protocol: TCP
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /deployments/config
              name: config
              readOnly: false
            - mountPath: /data
              name: appdata
              readOnly: false
      serviceAccountName: camel-splitter
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: application.properties
                path: application.properties
            name: camel-splitter
            optional: false
          name: config
        - name: appdata
          persistentVolumeClaim:
            claimName: camel-splitter
            readOnly: false
