config_mgmt/gitops/bootstrap/camel-splitter/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: camel-splitter
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: camel-splitter
  wildcardPolicy: None
